--- a/contruct.html
+++ b/contruct.html
@@ -5,15 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contract Me </title>
+    <link rel="stylesheet" href="styleee.css">
+    
 </head>
-
 <body>
     <h1>My Contruct Details</h1>
     <p>my factional address </p>
-    <p>7365069507</p>
-    <p>robinpa0909@gmail.com</p>
+    <p>73650695**</p>
+    <p>robin.11800016@lpu.in</p>
     <hr>
-    <form action="mailto:info@sfjks.com" method="post" enctype="text/plain">
+    <form action="mailto:fahdlink@gmail.com" method="post" enctype="text/plain">
         <label for="">Your Name:</label>
         <input type="text" name="yourName" value=""><br>
         <label for="">Your Email:</label>
